2022-02-10  Chris Dumez  <cdumez@apple.com>

        Resync web-platform-tests/eventsource from upstream
        https://bugs.webkit.org/show_bug.cgi?id=236374

        Reviewed by Youenn Fablet.

        * TestExpectations:
        * platform/glib/TestExpectations:

2022-02-10  Andres Gonzalez  <andresg_22@apple.com>

        Mark accessibility/mac/line-index-for-textmarker.html as Slow in Mac-wk2 Debug.
        https://bugs.webkit.org/show_bug.cgi?id=236448
        <rdar://problem/88757785>

        Unreviewed gardening.

        * platform/mac-wk2/TestExpectations:

2022-02-10  Youenn Fablet  <youenn@apple.com>

        Settling of a fetch promise should be delayed in case page is entering page cache
        https://bugs.webkit.org/show_bug.cgi?id=236292
        <rdar://88452971>

        Reviewed by Chris Dumez.

        * http/tests/navigation/fetch-pagecache-expected.txt: Added.
        * http/tests/navigation/fetch-pagecache.html: Added.

2022-02-10  Antti Koivisto  <antti@apple.com>

        [:has() pseudo-class] Nullptr crash with non-function :has
        https://bugs.webkit.org/show_bug.cgi?id=236431
        rdar://87061239

        Reviewed by Cameron McCormack.

        * fast/selectors/malformed-has-expected.txt: Added.
        * fast/selectors/malformed-has.html: Added.

2022-02-10  Martin Robinson  <mrobinson@webkit.org>

        [macOS arm64] imported/w3c/web-platform-tests/css/css-transforms/perspective-transforms-equivalence.html is consistently failing
        https://bugs.webkit.org/show_bug.cgi?id=235084
        <rdar://problem/87421733>

        Reviewed by Simon Fraser.

        * platform/glib/TestExpectations: Unskip newly passing tests.
        * platform/mac/TestExpectations: Ditto.

2022-02-09  Diego Pino Garcia  <dpino@igalia.com>

        [WPE] Mark several WPT SVG import filter tests as failure

        Unreviewed test gardening.

        r289510 updated the baselines of these tests, but this was not the