@@ -6,6 +6,7 @@
         <link rel="match" href="-apple-color-filter-color-property-list-item-expected.html">
 
         <meta name="assert" content="-apple-color-filter affects the color of a list item bullet">
+        <meta name="fuzzy" content="maxDifference=0-2; totalPixels=0-2310">
         <style type="text/css">
             div.test
             {
