@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="fuzzy" content="maxDifference=0-1; totalPixels=0-710" />
 <style>
 .container {
     position: absolute;
