@@ -1,5 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width">
+    <meta name="fuzzy" content="maxDifference=0-1; totalPixels=0-2">
     <title>This tests that we correctly remove the reflection of an element with a backdrop-filter applied to it.</title>
     <style>
 
