@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>This tests that rounded rect on subpixel position stays renderable.</title>
+<meta name="fuzzy" content="maxDifference=0-1; totalPixels=0-1">
 <style>
   div {
     width: 20px;
