@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="fuzzy" content="maxDifference=0-11;totalPixels=9100-9300" />
+<meta name="fuzzy" content="maxDifference=0-11;totalPixels=9100-10300" />
 <style>
 .square {
     display: inline-block;
