@@ -5,6 +5,7 @@
     <link rel="help" href="https://drafts.fxtf.org/motion-1/#offset-rotate-property">
     <link rel="match" href="offset-rotate-ref.html">
     <meta name="assert" content="This tests offset-rotate auto with path()">
+    <meta name="fuzzy" content="maxDifference=0-1; totalPixels=0-57">
     <style>
       #target {
         position: absolute;
